--- a/public/css/grafica.css
+++ b/public/css/grafica.css
@@ -51,7 +51,7 @@
     }
 }
 .tdatatable tbody{
-    height: 60px;
+    height: 20px;
     overflow-y: auto;
     width: 100%;
 }
@@ -59,5 +59,5 @@
 .tdatatable tbody,
 .tdatatable td,
 .tdatatable th{
-    display:inline-block
+    display:block;
 }
